--- a/src/rosmod_actor/package.xml
+++ b/src/rosmod_actor/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>rosmod_actor</name>
   <version>0.0.0</version>
   <description>The rosmod actor package</description>
@@ -33,22 +33,13 @@
   <!-- Examples: -->
   <!-- Use build_depend for packages you need at compile time: -->
   <build_depend>message_generation</build_depend>
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <run_depend>message_runtime</run_depend>
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>rosmod_jsoncpp</build_depend>
-  <build_depend>rosmod_component</build_depend>
-  <build_depend>rosmod</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <run_depend>rosmod_jsoncpp</run_depend>
-  <run_depend>rosmod_component</run_depend>
-  <run_depend>rosmod</run_depend>
-  <run_depend>std_msgs</run_depend>
-
+  <depend>rosmod_jsoncpp</depend>
+  <depend>rosmod_component</depend>
+  <depend>rosmod</depend>
+  <depend>roscpp</depend>
+  <depend>std_msgs</depend>
+  <depend>message_runtime</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
